# curiosity

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-indexes.py  docker-compose.yml  ingest.py  seasons-metadata.json
.github/workflows/: build.yml
curiosity/: Cargo.toml
curiosity/src/: db.rs  docs_accessor.rs  lib.rs  schema.rs  store.rs  term_map.rs
db/: Dockerfile  schema.sql
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: docs.html  index.html
frontend/src/: App.vue  api.ts  main.ts  types.ts
search/: Cargo.toml  Dockerfile
search/src/: highlighter.rs  main.rs  types.rs
search/static/: docs.html  ie8-urlsearch.js  index.html  javascript.js  stylesheet.css
server/: Cargo.toml
server/frontend/: package.json
server/frontend/src/: api.ts
server/src/: lib.rs  main.rs  update.rs
server/src/api/: mod.rs  search.rs  types.rs
server/static/: index.html  javascript.js  prism.js  stylesheet.css
server/static/assets/: index-7e4d2230.js  index-7faebec0.js  index-a3701ea0.css
src/: db.rs  lib.rs  main.rs  sentence.rs  serialization_crimes.rs  store.rs  term_map.rs
static/: docs.html  index.html
static/assets/: index-0357e95a.css  index-0b23e458.js  index-4c1a5f35.css  index-55bef05e.css  index-56754a1a.js  index-63dd01fa.js  index-7504e5fb.js  index-78b505c2.css  index-8b21ccc8.css  index-a5854e40.js  index-adf9ea68.js  index-b3ee7684.css  index-c0253a83.js  index-cdaa8046.css  index-e067cc9f.js
transcripts/autumn-in-hieron/: 10fwGxLGO0KBnB9b5p0nyqvp2YB4csJB7JFNltMOoQj0.txt  112IWBUU1Yes1A7u75xKSxvGjFtcktUzW0weW0uLPvN4.txt  19odgykm_oADvQNZAkwdWBCOsAVPpjAlRq9qt8ElrGN8.txt  1B59UxpObG0U_ky8o5YbyRC4RC2xS-a9hbzJBB-DT_Kk.txt  1BHXPnZty5CHuZAQwiB2019m_doof7ADB3wksa_NWzNo.txt  1B_GSuQ42l0Y2kcxiGl0gC1cgcKekDmV4DbmGsaQOV0w.txt  1F0BUHPkeX1ShpOWzxl_xr2BqbjlD4xsmHDwZLRQ_i1w.txt  1HFKCMM7f74dP30FNbzBq0ZkrvX2A7cLxYwLFmXNGeDE.txt  1IpnFHplPXGH2IOEpTs9g2w-yLGTEkpH2VQuawpUUK4o.txt  1Kz3rzwRRpSdMoIkXAIWI3hmdgOuiwUql5U_ZlBka2tE.txt  1N77h8Sd1wE5ZNjVxsBlE11AcqWGuaKsh_V0MxDfmqKk.txt  1ND8ah8CTIopM97F7UsMukMD_fMdtdEuBFFCM0rL6L4s.txt  1Nb73-BDfUzxYbNIDiVKGe6W-GvZNxFCfI7jHDNGtJbk.txt  1OSPBC5R-8M0KoAmJfjEQS86wqdxCWQWCSGRlLklbjQI.txt  1Q0-VP3_DdZzQ7xE9LmyK5kLi1Vqy6MTLOerdWtGwzxM.txt  1Qe-Za5Yq_60X2-xIINdzP3EAVXxicwAR4zzK991YhgQ.txt  1Sw-f33rrfarmd1AX8Gmd8bENbnmdItVBCTKIqimV_Uk.txt  1TTy0x1iYdvYoeaolRe1a_yMqxUfO7PCt9yxC925p8TE.txt  1WqnCE4BlWsiWBXR4z9SX6B7Q_StMaXbh6dAlPYPqdRg.txt  1XdbXmjv2injl8Ua7_KtpaBRzIvCsv23w269KvvV4rJs.txt  1Zxf5R4YiPCyHkGneCSxnTA402GfJBfEM6I9_S3RFDD0.txt  1_Lbd0qtfApJPfYVWj9e9mtn1yRUbOwrkyspZi-49MPM.txt  1bQBl-pe7V3KXu_oY4FKJatFGEuKqjHzbzGBPkAewd2c.txt  1cnLCI-g5NAqt6Dd-IaHcNOraiKRujeZvOJY9GRqpKVI.txt  1neSxYVTSu6T07ZtaGkoJXgBc8qCnd3XLThkuWopwehk.txt  1sGQ3G9hATV_mBzrWLKPzFX2sZgdrGwIrleNBmUoC2O8.txt  1tKREOydDofdyNWsEiAYGa6Oe4rdgIXvbq57f-BQoJtk.txt  1uEEyEY0CcWKuo0pWSSXcRpbJUyO4haeiate3zYdeW4Y.txt  1vptygnyKDEPUnICnnpCTpYOpZxfbPebn-st23oZ2Yro.txt  1xCBFsZqxr56ELVzXcpZ5nmH8bQO-rUHE66dbUEWgnA4.txt  1xk-tRqgsn65kTy6gNplng6qYJKgNuGuLZ4BAP41c-1k.txt  1xyHZAhhv1uaJONTXVs9r9sWvYNCCCxWv6y31zMax0wY.txt  1znte6qTjshc1vFiF7UE9H3tk1FwEcTjBsLuWWWkL0yU.txt
transcripts/counter-weight/: 1-MGS6XXccDo05z_iwEFXlma--RRoouIQiZ8JoysWokU.txt  (+45 more)
(+299 files in other folders)
