[package]
name = "curiosity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = { version = "0.6.2", features = ["tokio-uring"] }
actix-web = "4.3.1"
anyhow = "1.0.71"
base64-url = "2.0.0"
line-span = "0.1.3"
nyoom-json = "0.3.0"
ph = "0.5.0"
postcard = { version = "1.0.4", features = ["use-std"] }
redb = "0.17.0"
rend = "0.4.0"
reqwest = { version = "0.11.17", default-features = false, features = ["rustls", "rustls-tls-webpki-roots", "brotli", "deflate", "mime_guess"] }
rkyv = { version = "0.7.41", features = ["size_32", "archive_le", "alloc", "std"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
smallvec = { version = "1.10.0", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
strum = { version = "0.24.1", features = ["derive"] }
tantivy = { version = "0.19.2" }
thiserror = "1.0.40"
yoke = { version = "0.7.1", features = ["derive"] }
zerocopy = "0.6.1"
zip = "0.6.5"

[profile.release]
# lto = "fat"
# codegen-units = 1
