[package]
name = "curiosity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line-span = "0.1.3"
memchr = "2.5.0"
nyoom-json = "0.3.0"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision", "arc_lock"] }
ph = "0.6.0"
postcard = { version = "1.0.4", features = ["use-std"] }
redb = "0.17.0"
rend = "0.4.0"
rkyv = { version = "0.7.41", features = ["size_32", "archive_le", "alloc", "std"] }
serde = { version = "1.0.160", features = ["derive"] }
smallvec = { version = "1.10.0", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
strum = { version = "0.24.1", features = ["derive"] }
tantivy = { version = "0.19.2" }
thiserror = "1.0.40"
yoke = { version = "0.7.1", features = ["derive"] }
zerocopy = "0.6.1"

