[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = { version = "0.6.2", features = ["tokio-uring"] }
actix-web = "4.3.1"
base64-url = "2.0.0"
nyoom-json = "0.3.0"
postcard = { version = "1.0.4", features = ["use-std"] }
reqwest = { version = "0.11.17", default-features = false, features = ["rustls", "rustls-tls-webpki-roots", "brotli", "deflate", "mime_guess"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
smallvec = { version = "1.10.0", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
tinyset = "0.4.15"
zip = "0.6.5"
curiosity = { path = "../curiosity"}
thiserror = "1.0.40"
redb = "0.17.0"
